Add shell for sensors on teensy side, message support for all data

--- a/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
+++ b/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
@@ -54,6 +54,11 @@ add_message_files(
   MotorDebugMessageFeedback.msg
   MotorMessageFeedback.msg
   SensorRequestMessage.msg
+  PulseOxRxMessage.msg
+  ThermistorMessage.msg
+  TimestampedFloat.msg
+  UltrasonicDataMessage.msg
+  ImpedanceDataMessage.msg
 )
 
 ## Generate services in the 'srv' folder
