--- a/rosnetwork_master/catkin_ws/src/sensor_pkg/CMakeLists.txt
+++ b/rosnetwork_master/catkin_ws/src/sensor_pkg/CMakeLists.txt
@@ -72,6 +72,7 @@ generate_messages(
   DEPENDENCIES
   std_msgs
   sensor_msgs
+  grasper_msg
 )
 
 ################################################
