Add phase angle to gui

--- a/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
+++ b/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
@@ -59,6 +59,7 @@ add_message_files(
   TimestampedFloat.msg
   UltrasonicDataMessage.msg
   ImpedanceDataMessage.msg
+  PhaseAngleMessage.msg
 )
 
 ## Generate services in the 'srv' folder
