Update message format based on sensor rate doc

--- a/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
+++ b/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
@@ -60,6 +60,7 @@ add_message_files(
   UltrasonicDataMessage.msg
   ImpedanceDataMessage.msg
   PhaseAngleMessage.msg
+  MCUConnectedMessage.msg
 )
 
 ## Generate services in the 'srv' folder
