Add button on GUI for specifying when to capture camera frames

--- a/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
+++ b/rosnetwork_master/catkin_ws/src/grasper_msg/CMakeLists.txt
@@ -61,6 +61,7 @@ add_message_files(
   ImpedanceDataMessage.msg
   PhaseAngleMessage.msg
   MCUConnectedMessage.msg
+  CameraRequestMessage.msg
 )
 
 ## Generate services in the 'srv' folder
